# TTL_attempts

./: Successffull_Eyeballed_TTL.ipynb  Successffull_Eyeballed_TTL_11.ipynb  pyproject.toml
